[package]
name = "b-ext"
version = "0.1.0"
edition = "2021"
description = "`b`, now with more features"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
b = "0.2.0"
serde = { version = "1.0.171", optional = true, features = ["derive"] }
